BUGS popup partially  off screen, no negative duration ability on schedule set, filter error, absent delete button

--- a/client/src/components/calendar/forms/editForm.scss
+++ b/client/src/components/calendar/forms/editForm.scss
@@ -7,6 +7,7 @@
   box-shadow: 0 3px 20px #555555;
   border-radius: 5px;
 	background-color: white;
+	z-index: 200;
 
 	@media screen and (max-width: 601px) {
 		position: fixed;
