--- a/client/src/components/calendar/popups/popBox.scss
+++ b/client/src/components/calendar/popups/popBox.scss
@@ -8,13 +8,13 @@
   border-radius: 5px;
   font-size: 0.8rem;
 	background-color: white;
-	z-index: 10000;
 
 	@media screen and (max-width: 601px) {
 		position: fixed;
 		top: 33%;
 		left: 20%;
 		width: 73%;
+		z-index: 200;
 	}
 }
 .closeIconEdit {
