--- a/client/src/components/feedback/UserFeedback.css
+++ b/client/src/components/feedback/UserFeedback.css
@@ -85,9 +85,9 @@
   font-size: 2rem;
 }
 
-.fa-trash {
-  display: none;
-}
+/* .fa-trash { */
+/*   display: none; */
+/* } */
 
 .helper-tool {
   display: none;
@@ -95,7 +95,7 @@
   color: red;
 }
 
-@media (max-width:1000px) {
+@media (max-width: 1000px) {
   .feedback-form-container {
     width: 95%;
   }
@@ -103,7 +103,7 @@
     width: 95%;
   }
 }
-@media (max-width:800px) {
+@media (max-width: 800px) {
   .appointment-heading h4 {
     font-size: 1.5rem;
   }
@@ -127,28 +127,27 @@
   .delete-btn {
     display: none;
   }
-  .fa-trash {
+  .userTrash {
     display: block;
     color: var(--danger-color);
     font-size: 1.5rem;
     cursor: pointer;
   }
-  .fa-trash:hover {
-    opacity: .8;
+  .userTrash:hover {
+    opacity: 0.8;
   }
-  .fa-trash:hover .helper-tool{
+  .userTrash:hover .helper-tool {
     display: block;
   }
-
 }
 
-@media (max-width:400px) {
+@media (max-width: 400px) {
   .main-body {
     margin-right: 0rem;
   }
   .feedback-form-container {
-    padding: .5rem;
-    font-size: .8rem;
+    padding: 0.5rem;
+    font-size: 0.8rem;
   }
   .icon-text {
     font-size: 1.2rem;
@@ -162,7 +161,7 @@
     margin: auto;
   }
   .appointment-heading {
-    margin-left: .2rem;
+    margin-left: 0.2rem;
   }
   .appointment-heading h4 {
     font-size: 1rem;
@@ -171,7 +170,7 @@
   .appointment-body {
     flex-direction: column;
   }
-  .appointment-item h4{
+  .appointment-item h4 {
     font-size: 1rem;
   }
   .feedback-container h2 {
@@ -181,9 +180,9 @@
     padding: 1rem 1rem;
   }
   .feedback-body {
-    font-size: .8rem;
+    font-size: 0.8rem;
   }
   .page-numbers a {
-    font-size: .8rem;
+    font-size: 0.8rem;
   }
 }
